Fix(SocialButton): Align center and change padding

--- a/styles/Button.module.scss
+++ b/styles/Button.module.scss
@@ -8,8 +8,9 @@
   @apply bg-socials;
   @apply rounded-md;
   @apply w-10 h-10;
-  @apply p-1;
+  @apply p-2;
   @apply shadow-md;
+  @apply items-center;
 }
 
 .socialBtnDark {
